--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "News", news_releases_path %></li>
         <li><%= link_to "About Us", '#about_us', data: {toggle: 'modal', target: '#about_us' } %></li>
         <li><%= link_to "Contact Us", '#' %></li>
       </ul>
